--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,10 +387,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake
 # ----> use -DMPI_BASE_DIR=/path/to/mpibase for specifying target lib.
 #
 find_package(MPI REQUIRED)
-set(CMAKE_C_COMPILE_FLAGS   ${CMAKE_C_COMPILE_FLAGS}   ${MPI_COMPILE_FLAGS})
-set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS}) 
-set(CMAKE_C_LINK_FLAGS	${CMAKE_C_LINK_FLAGS}    ${MPI_LINK_FLAGS})
-set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
+set(CMAKE_COMPILE_FLAGS ${CMAKE_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
+set(CMAKE_LINK_FLAGS    ${CMAKE_LINK_FLAGS}    ${MPI_LINK_FLAGS})
 include_directories(${MPI_INCLUDE_PATH})
 set(ExtraLibs ${ExtraLibs} ${MPI_LIBRARIES})
 #
